# webgpupy

./: .buildinfo  .gitignore  .gitmodules  Cargo.toml  Readme.md  codecov.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/examples/: index.doctree
.doctrees/examples/wgpy_examples/python/ray_tracing_in_one_weekend/: chapter_10_wgpy.doctree  chapter_11_wgpy.doctree  chapter_12_wgpy.doctree  chapter_13_wgpy.doctree  chapter_2_wgpy.doctree  chapter_4_wgpy.doctree  chapter_5_wgpy.doctree  chapter_7_wgpy.doctree  chapter_8_wgpy.doctree  chapter_9_wgpy.doctree  readme.doctree
.doctrees/nbsphinx/examples/wgpy_examples/python/ray_tracing_in_one_weekend/: chapter_10_wgpy.ipynb  chapter_12_wgpy.ipynb  chapter_13_wgpy.ipynb  chapter_7_wgpy.ipynb  chapter_8_wgpy.ipynb
.doctrees/reference/: index.doctree
.doctrees/reference/array_objects/: Ndarray.doctree  index.doctree
.doctrees/reference/routines/: index.doctree  mathematical_functions.doctree
.github/: dependabot.yml
.github/workflows/: CI.yml  deploy-pages.yml
_sources/: index.rst.txt
_sources/examples/: index.rst.txt
_sources/reference/: index.rst.txt
_sources/reference/array_objects/: Ndarray.rst.txt
_sources/reference/routines/: index.rst.txt  mathematical_functions.rst.txt
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs
crates/wgpy/: Cargo.toml
crates/wgpy/src/: lib.rs
crates/wgpy_core/: Cargo.toml
crates/wgpy_core/compute_shaders/u32/: broadcast.wgsl  get_item_index.wgsl  slice_to_index.wgsl
crates/wgpy_core/src/: errors.rs  lib.rs  ndarray.rs  operand.rs  types.rs  ufunc.rs  utils.rs
crates/wgpy_core/src/array_routines/: arange.rs  broadcast.rs  dstack.rs  mod.rs  repeat.rs  where_routine.rs
crates/wgpy_logical/: Cargo.toml
crates/wgpy_logical/src/: binary.rs  lib.rs  logical.rs  misc.rs
crates/wgpy_math/: Cargo.toml
crates/wgpy_math/compute_shader/f32/: cross.wgsl
crates/wgpy_math/src/: arithmetic.rs  comparison.rs  cross.rs  lib.rs  misc.rs  trigonometry.rs
crates/wgpy_pyo3/: Cargo.toml  pyproject.toml  requirements-dev.txt
crates/wgpy_pyo3/docs/source/: conf.py  index.rst
crates/wgpy_pyo3/docs/source/examples/: index.rst
crates/wgpy_pyo3/docs/source/examples/ray_tracing_in_one_weekend/: chapter_2_wgpy.ipynb  chapter_4_wgpy.ipynb  chapter_5_wgpy.ipynb  chapter_7_wgpy.ipynb  index.rst
crates/wgpy_pyo3/docs/source/reference/array_objects/: index.rst
crates/wgpy_pyo3/python/webgpupy/: __init__.py  sin.md
crates/wgpy_pyo3/python/webgpupy/python_doc/: cos.rst  ndarray.tolist.rst  sin.rst
crates/wgpy_pyo3/src/: arithmetic.rs  binary.rs  cast.rs  lib.rs  logical.rs  misc.rs  misc_math.rs  ndarraypy.rs  random.rs  trigonometry.rs  types.rs  ufunc.rs
crates/wgpy_pyo3/wp_tests/: test_arithmetic.py  test_array.py  test_binary.py  test_logical.py  test_misc_math.py  test_random.py  test_trigonometry.py  test_utils.py
crates/wgpy_random/: Cargo.toml
crates/wgpy_random/benches/: encoder_bench.rs
crates/wgpy_random/compute_shader/: erfinv.wgsl  iota.wgsl  threefry.wgsl
crates/wgpy_random/src/: generator.rs  iota.rs  lib.rs  threefry.rs
examples/: index.html
examples/wgpy_examples/python/ray_tracing_in_one_weekend/: chapter_10_wgpy.html  chapter_11_wgpy.html  chapter_11_wgpy.ipynb  chapter_12_wgpy.html  chapter_12_wgpy.ipynb  chapter_13_wgpy.html  chapter_2_wgpy.html  chapter_4_wgpy.html  chapter_5_wgpy.html  chapter_5_wgpy.ipynb  chapter_7_wgpy.html  chapter_8_wgpy.html  chapter_8_wgpy.ipynb  chapter_9_wgpy.html  chapter_9_wgpy.ipynb  readme.html
reference/: index.html
reference/array_objects/: Ndarray.html  index.html
reference/routines/: index.html  mathematical_functions.html
src/: lib.rs
