[workspace]
resolver = "2"
members = [
    "crates/wgpy",
    "crates/wgpy_core",
    "crates/wgpy_math",
    "crates/test_utils",
    "crates/wgpy_pyo3",
    "crates/wgpy_random",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
#arrow_gpu = { path="../arrow-gpu/crates/arrow"}
arrow_gpu = { git="https://github.com/psvri/arrow-gpu.git", rev = "ba14a9e919cf05aeee3a1c20ebd60b9d9c2db624"}
wgpu = "0.20.0"
once_cell = "1.19.0"
bytemuck = "1.16.0"

[profile.release]
debug=1

[profile.bench]
debug=1