[workspace]
resolver = "2"
members = [
    "crates/wgpy",
    "crates/wgpy_core",
    "crates/wgpy_math",
    "crates/test_utils",
    "crates/wgpy_pyo3",
    "crates/wgpy_random",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
#arrow_gpu = { path="../arrow-gpu/crates/arrow"}
arrow_gpu = { git="https://github.com/psvri/arrow-gpu.git", rev = "2dc3367818c0264f72af4642d85d884ee6d27f41"}
wgpu = "22.1.0"
bytemuck = "1.16.3"

[profile.release]
debug=1

[profile.bench]
debug=1