[workspace]
resolver = "2"
members = [
    "crates/wgpy",
    "crates/wgpy_core",
    "crates/wgpy_math",
    "crates/test_utils",
    "crates/wgpy_pyo3",
    "crates/wgpy_random",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module"] }
#arrow_gpu = { path="../arrow-gpu/crates/arrow"}
arrow_gpu = { git="https://github.com/psvri/arrow-gpu.git", rev = "f16d71011bf10566d538c90b6bf11e0a08ea779a"}
wgpu = "22.1.0"
bytemuck = "1.17.1"

[profile.release]
debug=2

[profile.bench]
debug=1