[package]
name = "webgpupy_py03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "webgpupy"

[dependencies]
pyo3 = {workspace=true}
webgpupy = {path="../wgpy"}
pyo3-log = "0.9.0"