[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "webgpupy"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = ["pytest==7.4.3","numpy==1.26","pytest-xdist==3.4.0"]

[tool.maturin]
python-source = "python"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
mypkg = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["wp_tests"]