[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "webgpupy"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
mypkg = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["wp_tests", "python/webgpupy/python_doc/"]
addopts = "--doctest-glob=\"*.rst\""